# OServers

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
src/gui/: app.rs  mod.rs
src/servers/: ftp.rs  http.rs  mod.rs  ssh.rs  tftp.rs
