[package]
name = "oservers"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["image"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Server
warp = "0.3"

# FTP Server
libunftp = "0.20"
unftp-sbe-fs = "0.2"

# TFTP
async-tftp = "0.3"

# SSH (simplified - we'll use a basic implementation)
async-trait = "0.1"

# System tray
tray-icon = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Utilities
once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
chrono = "0.4"
rfd = "0.14"

# Pinned versions for Rust 1.85 compatibility
time = "=0.3.36"
home = "=0.5.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
